Set up page created with images of all appropriate gear

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Your Name - UGC Creator | Stories Worth Stopping For</title>
-    <meta name="description" content="Authentic UGC creator specializing in travel, lifestyle, and tech content. Turning products into experiences, one video at a time." />
+    <title>Fahad Rahman - Cinematic Content Creator</title>
+    <meta name="description" content="Cinematic creator specializing in brand content, UGC, and visual storytelling for ambitious brands." />
   </head>
   <body>
     <div id="root"></div>
